<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/title_" >
        <requestFocus />
    </EditText>
	
    <EditText
        android:id="@+id/etKeyword"
        android:layout_width="match_parent"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/keyword"
        android:visibility="gone"
        android:maxLength="3" />

    <Button
        android:id="@+id/chooseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/choose_websites" />
	
    <TextView 
        android:id="@+id/numWebsitesSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:visibility="gone"
        android:layout_gravity="center"/>
    
    <Button
        android:id="@+id/doneBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/create" />

</LinearLayout>
