<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true" 
    android:focusableInTouchMode="true"
    android:orientation="vertical" >
    <!-- 
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="10dp"
        android:weightSum="4">
        
        <EditText
        android:id="@+id/etKeyword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Key.."
        android:layout_weight="1"
        android:ems="10" />
        
        <EditText
        android:id="@+id/etSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        android:layout_weight="3"
        android:ems="10" />
        
    </LinearLayout>
	
	 -->
	 
	 <EditText
        android:id="@+id/etSearch"
        android:layout_width="fill_parent"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/search"
        android:ems="10" />
	 
    <TextView 
        android:id="@+id/tvDefaultCat"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/the_default_category_is_"/>
    

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/btnSearch" />

    <Button
        android:id="@+id/btnChooseDef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/choose_default" />
    
    <TextView 
        android:id="@+id/tvWelcomeMessage"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/welcome_message"/>

</LinearLayout>
